add auth module

--- a/apps/api/.eslintrc.json
+++ b/apps/api/.eslintrc.json
@@ -15,7 +15,7 @@
 			"rules": {}
 		},
 		{
-			"files": ["*.entity.ts"],
+			"files": ["*.entity.ts", "*.dto.ts"],
 			"rules": {
 				"@typescript-eslint/explicit-member-accessibility": "off"
 			}
