--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "semi": false,
   "bracketSpacing": true,
   "printWidth": 100,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "arrowParens": "avoid"
 }
