--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
 		"@nestjs/platform-express": "^9.0.0",
 		"@nestjs/typeorm": "^9.0.1",
 		"@nrwl/angular": "15.2.3",
+		"bcrypt": "^5.1.0",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.0",
+		"jsonwebtoken": "^9.0.0",
 		"pg": "^8.8.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.0.0",
@@ -50,7 +54,9 @@
 		"@nrwl/node": "15.2.3",
 		"@nrwl/nx-cloud": "15.0.2",
 		"@nrwl/workspace": "15.2.3",
+		"@types/bcrypt": "^5.0.0",
 		"@types/jest": "28.1.1",
+		"@types/jsonwebtoken": "^9.0.0",
 		"@types/node": "18.7.1",
 		"@typescript-eslint/eslint-plugin": "^5.36.1",
 		"@typescript-eslint/parser": "^5.36.1",
