--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"pg": "^8.8.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.0.0",
+		"slugify": "^1.6.5",
 		"tslib": "^2.3.0",
 		"typeorm": "^0.3.10",
 		"zone.js": "~0.11.4"
