--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
 		"@nestjs/core": "^9.0.0",
 		"@nestjs/platform-express": "^9.0.0",
 		"@nestjs/typeorm": "^9.0.1",
+		"@ngrx/component-store": "~15.0.0",
+		"@ngrx/effects": "~15.0.0",
+		"@ngrx/entity": "~15.0.0",
+		"@ngrx/router-store": "~15.0.0",
+		"@ngrx/store": "~15.0.0",
 		"@nrwl/angular": "15.5.3",
 		"bcrypt": "^5.1.0",
 		"class-transformer": "^0.5.1",
@@ -46,6 +51,8 @@
 		"@angular/language-service": "15.1.1",
 		"@nestjs/schematics": "^9.0.0",
 		"@nestjs/testing": "^9.0.0",
+		"@ngrx/schematics": "~15.0.0",
+		"@ngrx/store-devtools": "~15.0.0",
 		"@nrwl/cli": "15.5.3",
 		"@nrwl/cypress": "15.5.3",
 		"@nrwl/eslint-plugin-nx": "15.5.3",
@@ -65,6 +72,7 @@
 		"eslint": "~8.15.0",
 		"eslint-config-prettier": "8.1.0",
 		"eslint-plugin-cypress": "^2.10.3",
+		"jasmine-marbles": "~0.9.1",
 		"jest": "28.1.1",
 		"jest-environment-jsdom": "28.1.1",
 		"jest-preset-angular": "~12.2.2",
